Fix contrast error

--- a/themes/custom/apigee_kickstart/assets/css/apigee-kickstart.style.css
+++ b/themes/custom/apigee_kickstart/assets/css/apigee-kickstart.style.css
@@ -4565,7 +4565,7 @@ input[type=button].btn-block {
 .breadcrumb-item + .breadcrumb-item::before {
   float: left;
   padding-right: 0.375rem;
-  color: rgba(0, 0, 0, 0.4);
+  color: #fff;
   content: ">";
 }
 .breadcrumb-item + .breadcrumb-item:hover::before {
@@ -11724,7 +11724,7 @@ fieldset > .fieldset-wrapper p:last-child {
   right: 0.5rem;
   bottom: 2px;
   height: 2px;
-  background-color: var(--ak-accent-color);
+  background-color: var(--ak-header-color);
   display: none;
 }
 @media (min-width: 992px) {
